[gd_scene load_steps=24 format=3 uid="uid://buf7x4yw7uj2f"]

[ext_resource type="Script" uid="uid://b7vfhouher3kw" path="res://Menu Scripts/settings_scene.gd" id="1_4s63o"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="1_itmm8"]
[ext_resource type="Texture2D" uid="uid://r0x5i2s0vspc" path="res://Menu Assets/Selection Title.png" id="2_d372u"]
[ext_resource type="Texture2D" uid="uid://ce5cmnitbtulq" path="res://Menu Assets/black square.png" id="3_07spo"]
[ext_resource type="Material" uid="uid://b0nn87h7iqj6s" path="res://Menu Shaders/Menu_BG.tres" id="4_7m3wq"]
[ext_resource type="Texture2D" uid="uid://bqjrg3vh0aogr" path="res://Menu Assets/DarkMode.png" id="4_07spo"]
[ext_resource type="Texture2D" uid="uid://dvhx8s4guhrie" path="res://Menu Assets/LightMode.png" id="5_78oe7"]
[ext_resource type="Texture2D" uid="uid://efsmbuddjoaj" path="res://Menu Assets/Menu_BG.png" id="5_a671u"]
[ext_resource type="Texture2D" uid="uid://cu20dxg3osgae" path="res://Menu Assets/Sound.png" id="8_07spo"]
[ext_resource type="Texture2D" uid="uid://baxgt8gltobrw" path="res://Menu Assets/Back (1).png" id="9_53ro8"]
[ext_resource type="Texture2D" uid="uid://ckk2xnx0ahc05" path="res://Menu Assets/Sound_Mute.png" id="11_53ro8"]
[ext_resource type="AudioStream" uid="uid://dk57nyfbj42mm" path="res://Audio/select_sound.wav" id="11_a671u"]
[ext_resource type="FontFile" uid="uid://bsdm1pj7st7rm" path="res://Font/Modular Amplitude.otf" id="13_ycs1b"]
[ext_resource type="FontFile" uid="uid://blpqqpdiclhio" path="res://Font/San Marino.otf" id="14_pjyjs"]
[ext_resource type="Texture2D" uid="uid://cdqv6heddyqna" path="res://Menu Assets/Button.png" id="15_4i53v"]
[ext_resource type="Texture2D" uid="uid://b0p5bu7iwysrl" path="res://Menu Assets/Button_Highlight.png" id="16_k2cyp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqbwp"]
bg_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 30.0
expand_margin_right = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2cyp"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 30.0
expand_margin_right = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjyjs"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 30.0
expand_margin_right = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k2cyp"]
texture = ExtResource("15_4i53v")
texture_margin_left = 100.0
texture_margin_top = 100.0
texture_margin_right = 100.0
texture_margin_bottom = 100.0

[sub_resource type="Animation" id="Animation_rqbwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("deletePopup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(96, 187)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("deletePopup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k2cyp"]
resource_name = "del_pop_anim"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("deletePopup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(96, 1115), Vector2(96, 67), Vector2(96, 187)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("deletePopup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0638491),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fydi"]
_data = {
&"RESET": SubResource("Animation_rqbwp"),
&"del_pop_anim": SubResource("Animation_k2cyp")
}

[node name="Settings Scene" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.497
anchor_right = 0.5
anchor_bottom = 0.497
offset_left = -960.0
offset_top = -539.76
offset_right = 960.0
offset_bottom = 540.24
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4s63o")

[node name="bg" type="TextureRect" parent="."]
material = ExtResource("1_itmm8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_07spo")

[node name="MenuBg" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.258824)
material = ExtResource("4_7m3wq")
layout_mode = 0
offset_left = -30.0
offset_top = -13.9999
offset_right = 2530.0
offset_bottom = 1426.0
scale = Vector2(0.759848, 0.759848)
texture = ExtResource("5_a671u")

[node name="SelectionTitle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -431.0
offset_right = 431.0
offset_bottom = 192.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="SelectionTitle"]
material = ExtResource("1_itmm8")
layout_mode = 2
texture = ExtResource("2_d372u")

[node name="DarkMode Button" type="TextureButton" parent="."]
material = ExtResource("1_itmm8")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.547
anchor_right = 0.5
anchor_bottom = 0.547
offset_left = 56.0
offset_top = -205.76
offset_right = 1132.0
offset_bottom = 438.24
scale = Vector2(0.639, 0.639)
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("5_78oe7")
texture_pressed = ExtResource("4_07spo")

[node name="DELETED" type="Label" parent="."]
visible = false
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 712.0
offset_top = 923.0
offset_right = 1540.0
offset_bottom = 1048.0
scale = Vector2(0.547696, 0.547696)
theme_override_fonts/font = ExtResource("14_pjyjs")
theme_override_font_sizes/font_size = 111
text = "saved deleted"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UNLOCKED" type="Label" parent="."]
visible = false
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 552.0
offset_top = 923.0
offset_right = 1812.0
offset_bottom = 1048.0
scale = Vector2(0.668484, 0.668484)
theme_override_fonts/font = ExtResource("14_pjyjs")
theme_override_font_sizes/font_size = 111
text = "unlocked everything"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="TouchScreenButton" parent="."]
material = ExtResource("1_itmm8")
position = Vector2(133, 45)
scale = Vector2(0.554455, 0.554455)
texture_normal = ExtResource("9_53ro8")

[node name="SoundToggle" type="TextureButton" parent="."]
material = ExtResource("1_itmm8")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.547
anchor_right = 0.5
anchor_bottom = 0.547
offset_left = -789.0
offset_top = -205.76
offset_right = 287.0
offset_bottom = 438.24
scale = Vector2(0.638759, 0.638759)
toggle_mode = true
texture_normal = ExtResource("8_07spo")
texture_pressed = ExtResource("11_53ro8")

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_a671u")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.493
anchor_top = 0.813
anchor_right = 0.493
anchor_bottom = 0.813
offset_left = -307.56
offset_top = -46.04
offset_right = 309.44
offset_bottom = 46.96
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("13_ycs1b")
theme_override_font_sizes/font_size = 81
theme_override_styles/hover = SubResource("StyleBoxFlat_rqbwp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k2cyp")
theme_override_styles/normal = SubResource("StyleBoxFlat_pjyjs")
text = "DELETE SAVE"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 1384.0
offset_top = 51.0
offset_right = 1556.0
offset_bottom = 78.0
scale = Vector2(2.88858, 2.88858)
theme_override_fonts/font = ExtResource("14_pjyjs")
text = "unlock everything"

[node name="deletePopup" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
material = ExtResource("1_itmm8")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.514
anchor_right = 0.502
anchor_bottom = 0.514
offset_left = -867.84
offset_top = -368.12
offset_right = 607.16
offset_bottom = 351.88
scale = Vector2(1.15511, 1.15511)
theme_override_styles/panel = SubResource("StyleBoxTexture_k2cyp")

[node name="Label" type="Label" parent="deletePopup"]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 256.253
offset_top = 124.663
offset_right = 1261.25
offset_bottom = 251.663
theme_override_fonts/font = ExtResource("13_ycs1b")
theme_override_font_sizes/font_size = 121
text = "Delete Save?"

[node name="YES" type="TextureButton" parent="deletePopup"]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 173.144
offset_top = 332.436
offset_right = 1249.14
offset_bottom = 976.436
scale = Vector2(0.392576, 0.392576)
texture_normal = ExtResource("15_4i53v")
texture_pressed = ExtResource("16_k2cyp")

[node name="Label" type="Label" parent="deletePopup/YES"]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 117.738
offset_top = 131.589
offset_right = 950.738
offset_bottom = 518.589
theme_override_fonts/font = ExtResource("13_ycs1b")
theme_override_font_sizes/font_size = 371
text = "YES"

[node name="NO" type="TextureButton" parent="deletePopup"]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 907.273
offset_top = 332.436
offset_right = 1983.27
offset_bottom = 976.436
scale = Vector2(0.392576, 0.392576)
texture_normal = ExtResource("15_4i53v")
texture_pressed = ExtResource("16_k2cyp")

[node name="Label" type="Label" parent="deletePopup/NO"]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 246.985
offset_top = 132.0
offset_right = 826.985
offset_bottom = 519.0
theme_override_fonts/font = ExtResource("13_ycs1b")
theme_override_font_sizes/font_size = 371
text = "NO"

[node name="deletepopup_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6fydi")
}

[connection signal="pressed" from="DarkMode Button" to="." method="_on_dark_mode_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SoundToggle" to="." method="_on_sound_toggle_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="deletePopup/YES" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="deletePopup/NO" to="." method="_on_no_pressed"]
